# quiz-dataset-report

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
quiz_dataset_report/: __init__.py  cli.py  clickhouse.py  config.py  images.py  mailer.py  models.py  quiz_api.py  report.py  resolver.py
quiz_dataset_report/templates/: report.html.j2
tests/: test_config.py  test_images.py  test_images_downscale.py  test_resolver.py
